# MusicWebsite

./: .gitignore  app.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
migrations/versions/: 2dc658442b39_users_table.py  b1f93f4689ab_posts_table.py
music_website/: __init__.py  config.py  forms.py  models.py  routes.py
music_website/templates/: base.html  edit_profile.html  index.html  login.html  profile.html  register.html
